# hip

./: .gitignore  LICENSE  README.md  colours.py  dataset_metadata_RGD1.parquet  dump_example_outputs.py  eval_horm.py  example.py  force_mae.csv  hessian_mae.csv  how_to_hip.md  pyproject.toml  relax_h2o_linear.py  requirements.txt  run.sh  setup.py  test_fa_diff.py  unique_training_indices.parquet  wandb_datascaling.parquet  wandb_natoms_scaling.parquet
alphanet/: alphanet_module.py  calculator.py  config.py  data.py  ff_lmdb.py  mul_trainer.py
configs/: equiformer_v2.yaml  train.yaml
data/: sample_100_indices_by_natoms.json
hip/: ani1x.py  batching_utils.py  colours.py  custom_strategy.py  differentiable_projection.py  equiformer_ase_calculator.py  equiformer_torch_calculator.py  ff_lmdb.py  find_checkpoint.py  finite_difference_ase.py  frequency_analysis.py  frequency_analysis_differentiable.py  geodesic_interpolate.py  geometric_normal_modes.py  hessian_eigen.py  hessian_utils.py  inference_utils.py  kls.py  logging_utils.py  loss_functions.py  lrscheduler.py  manifold_muon.py  masses.py  path_config.py  plot_molecules.py  qm9_hessian_dataset.py  rgd1_load_raw.py  t1x_dft_dataloader.py  training_module.py  trajectorysaver.py  units.py  utils.py  vibrations_torch.py
leftnet/: potential.py
metadata/: dataset_metadata_RGD1.parquet  dataset_metadata_ts1x-val.parquet
nets/: __init__.py  prediction_utils.py  scatter_utils.py
ocpmodels/: checkpointing.py  ff_lmdb.py  hessian_graph_transform.py
plotting/: compare_dft.py  eval_hessian_comparison.py  find_molecules.py  large.py  plot_compare_rgd1.py  plot_mae.py  plot_size.py  plot_speedmemory_lambda_standalone.py  plot_speedmemory_lambda_threepanel.py  print_rgd1.py  profile_forward_vjp.py  speed_comparison.py  speed_comparison_extended.py  speed_test_vjp.py
results_evalhorm/: eqv2_RGD1_autograd_metrics.csv  eqv2_orig_RGD1_autograd_metrics.csv  eqv2_ts1x-val_autograd_metrics.csv  esen_sm-conserving_ts1x-val.lmdb_1000_metrics.csv  esen_sm-conserving_ts1x-val.lmdb_10_metrics.csv  hesspred_v1_ts1x-val_predict_metrics.csv  hip_v2_RGD1_predict_metrics.csv  hip_v2_ckpt_ts1x-val_autograd_False_metrics.csv  hip_v2_ckpt_ts1x-val_autograd_True_metrics.csv  hip_v2_ckpt_ts1x-val_fd_False_metrics.csv  hip_v2_ckpt_ts1x-val_fd_True_metrics.csv  hip_v2_ckpt_ts1x-val_none_False_metrics.csv  hip_v2_ckpt_ts1x-val_none_True_metrics.csv  hip_v2_ckpt_ts1x-val_predict_False_metrics.csv  hip_v2_ckpt_ts1x-val_predict_True_metrics.csv  hip_v2_ckpt_ts1x-val_predict_metrics.csv  hip_v2_ts1x-val_predict_metrics.csv  mace_off_large_ts1x-val.lmdb_1000_metrics.csv  mace_off_medium_ts1x-val.lmdb_1000_metrics.csv  mace_off_small_ts1x-val.lmdb_1000_metrics.csv  mace_omol_extra_large_ts1x-val.lmdb_1000_metrics.csv  uma_s_ts1x-val.lmdb_1000_metrics.csv  uma_s_ts1x-val.lmdb_10_metrics.csv
results_speed_hip/: ts1x-val.lmdb_hip_batchsize_results_10.csv  ts1x-val.lmdb_hip_batchsize_results_hip_v1_10.csv  ts1x-val.lmdb_speed_comparison_results_10.csv  ts1x-val.lmdb_speed_comparison_results_hip_v1_10.csv
scaling/: datascaling_auto.py  plot_datascaling.py  plot_eckart_natoms.py  plot_histogram.py  plot_natoms_scaling.py  wandb_datascaling_loss_energy2.csv  wandb_datascaling_loss_force2.csv  wandb_datascaling_loss_hessian2.csv  wandb_natoms_scaling.parquet
scripts/: compare_atomization_energies.py  compute_dft_hessian_t1x.py  count_formulas_per_natoms.py  eigendecomp.py  eval.py  eval_equ.py  eval_horm.py  extract_dataset_metadata.py  inspect_model.py  killarney.sh  killarney_2xh100.sh  killarney_2xl40s.sh  killarney_4xl40s.sh  killarney_h100.sh  killarneyh.sh  launch_sweep_loop.sh  plot_evalhorm.py  plot_frequency_analysis.py  plot_hessian_heatmap.py  plot_horm.py  plot_reactbench.py  predict_samples.py  preprocess_hessian_dataset.py  process_rgd1_all_to_lmdb.py  process_rgd1_minimal_to_lmdb.py  profile_forward.py  run_tssearch_horm.py  run_tssearch_rgd1.py  run_tssearch_rgd1_sella.py  second_order_relaxation_pysiyphus.py  speed_comparison.py  speed_comparison_incltransform.py  sweep_agent.sbatch  sweep_init.sh  test_hessian_prediction.py  train.py  zero_point_energy_at_dft_reactant_product.py  zero_point_energy_at_mlff_geom.py.py
scriptsp/: find_molecules.py  large.py  plot_datascaling.py  plot_table.py  print_qm9hessian.py  print_rgd1.py  (+4 more)
(+176 files in other folders)
