[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hip"
version = "1.0.0"
description = ""
authors = [
    {name = "Andreas Burger", email = "andreas.burger@mail.utoronto.ca"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
include = ["hip*", "nets*", "ocpmodels*", "alphanet*", "leftnet*", "recipes*", "scripts*"]

[tool.ruff]
lint.ignore = ["F541"] 