[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hip"
version = "0.1.0"
description = ""
authors = [
    {name = "Andreas Burger", email = "andreas.burger@mail.utoronto.ca"},
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.7.0",
    "scipy",
    "scikit-learn",
    "pandas",
    "ase",
    "dxtb[libcint]",
    "rdkit>=2024.3.6",
    "rmsd",
    "pyscf",
    "openbabel-wheel",
    "plotly",
    "imageio",
    "seaborn",
    "kaleido",
    "nglview",
    "py3Dmol==2.5.0",
    "ruff",
    "pydantic==2.11.4",
    "tqdm",
    "progressbar==2.5",
    "einops",
    "torchmetrics",
    "pyarrow",
    "fastparquet",
    "pytorch_warmup",
    "lightning==2.5.1.post0",
    "triton==3.3.0",
    "opt-einsum-fx==0.1.4",
    "e3nn==0.5.1",
    "ipykernel",
    "nbformat",
    "toml",
    "omegaconf",
    "hydra-submitit-launcher",
    "hydra-core==1.*",
    "pyyaml",
    "wandb==0.21.0",
    "huggingface_hub>=0.27.1",
    "kagglehub>=0.3.12",
    "submitit",
    "joblib==1.5.1",
    "networkx==3.4.2",
    "lmdb==1.5.1",
    "h5py>=3.10.0",
    "muon-optimizer @ git+https://github.com/KellerJordan/Muon",
    "datasets>=4.4.1",
]

[tool.setuptools.packages.find]
include = ["hip*", "nets*", "ocpmodels*", "alphanet*", "leftnet*", "recipes*", "scripts*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
lint.ignore = ["F541"] 
